--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,9 @@
       margin: 0;
       font-family: 'Raleway', sans-serif;
     }
+  ::-webkit-scrollbar {
+   display: none;
+}
   </style>
   <title>React App</title>
 </head>
